--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,31 +1,31 @@
-.search-form * {
+.searchForm * {
   background-color: transparent;
   border: none;
   outline: none;
   font-size: 1.2rem;
   padding: 0.5rem;
 }
-.search-form input[type='search'] {
+.searchForm input[type='search'] {
   color: var(--light-basic);
   border-bottom: 2px solid transparent;
 
   transition: all ease 0.3s;
 }
-.search-form input[type='search']:focus {
+.searchForm input[type='search']:focus {
   border-bottom: 2px solid var(--primary-color);
 
   transition: all ease 0.3s;
 }
-.search-form button[type='submit'] {
+.searchForm button[type='submit'] {
   cursor: pointer;
   color: var(--primary-color);
 }
 
-.search-form {
+.searchForm {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
   display: flex;
 }
-.search-form > input[type='search'] {
+.searchForm > input[type='search'] {
   width: 100%;
 }
